added conditional for certificate.pkcsMangler.pfxPassword.annotations

--- a/charts/emby/templates/secrets.yaml
+++ b/charts/emby/templates/secrets.yaml
@@ -8,9 +8,11 @@ metadata:
 {{- if .Values.certificate.pkcsMangler.pfxPassword.labels }}
 {{ toYaml .Values.certificate.pkcsMangler.pfxPassword.labels | indent 4 }}
 {{- end }}
+{{- if .Values.certificate.pkcsMangler.pfxPassword.annotations }}
 {{- with .Values.certificate.pkcsMangler.pfxPassword.annotations }}
   annotations:
 {{ toYaml . | indent 4 }}
+{{- end }}
 {{- end }}
 type: Opaque
 stringData:
