--- a/charts/emby/templates/volumes.yaml
+++ b/charts/emby/templates/volumes.yaml
@@ -8,7 +8,7 @@ metadata:
     component: transcode
 spec:
   accessModes:
-  - {{ .Values.persistence.config.accessMode | quote }}
+  - {{ .Values.persistence.transcode.accessMode | quote }}
   resources:
     requests:
       storage: {{ .Values.persistence.transcode.size | quote }}
