--- a/charts/koel/templates/koel-service.yaml
+++ b/charts/koel/templates/koel-service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ template "koel.fullname" . }}-{{ .Values.koel.component }}"
+  namespace: {{ template "koel.namespace" . }}
   labels:
     {{- include "koel.labels" . | nindent 4 }}
 {{- if .Values.koel.service.labels }}
